# OmniForge

./: .env.example  .gitignore  README.md  improvement_suggestions_report.md  pyproject.toml  pytest.ini  pytest_output.txt  run_backend.bat  start_backend.py  test_api_response.json  test_debug.py  test_intent_detail.py  test_intent_index.py  test_output.txt  test_response.json  unimplemented_modules_report.md
agentflow/: __init__.py
agentflow/agents/: __init__.py  base.py  registry.py
agentflow/api/: __init__.py  routes.py
agentflow/app/: __init__.py  main.py
agentflow/config/: __init__.py  prompts.py  settings.py
agentflow/conversation/: __init__.py  context.py  manager.py  rewrite.py  session_state.py
agentflow/database/: agentflow.db-shm  agentflow.db-wal  sqlite.py
agentflow/docker/: Dockerfile  docker-compose.yml
agentflow/docs/: architecture.md  development.md  workflow.md
agentflow/graph/: __init__.py  context.py  context_builder.py  event.py  executor.py  plan.py  task.py  workflow.py
agentflow/knowledge/: __init__.py  chunking.py  embedder.py  index.py  (+4 more)
data/: faiss.index
frontend/: README.md  index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
test_data_tmp/: quantum.txt
tests/: test_conversation_runtime.py  test_file_interactions.py  test_knowledge_agent.py  test_knowledge_upgrade.py  test_planner_docx_report.py  test_query_rewriter.py  test_reflection_file_fallback.py  test_source_mode.py  test_speed_optimizations.py  test_streaming_answer.py  test_tool_framework.py  test_upload_route.py  test_workflow.py
(+102 files in other folders)
